--- a/src/Component/Banner2/Banner2.css
+++ b/src/Component/Banner2/Banner2.css
@@ -51,7 +51,6 @@
     gap: 10px;
     justify-content: center;
     margin-bottom: 2%;
-    margin-top: 2%;
 }
 
 /* Image Item: Now contains both image and text */
@@ -142,9 +141,10 @@
 }
 .explore-btn button{
     padding: 10px 25px;
-  border: none;
-  background: white;
-  border-radius: 20px;
+    border: none;
+    background: white;
+    border-radius: 20px;
+    color: black;
 }
 /* Rating & Time Styling */
 .recipe-info {
